--- a/plugin.xml
+++ b/plugin.xml
@@ -21,5 +21,6 @@
             </feature>
         </config-file>
         <source-file src="src/android/org/stereolux/cordova/serial/Serial.java" target-dir="src/org/stereolux/cordova/serial" />
+        <source-file src="src/android/org/stereolux/cordova/serial/UsbBroadcastReceiver.java" target-dir="src/org/stereolux/cordova/serial" />
     </platform>
 </plugin>
