fixing the plugin id

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cordovarduino",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Cordova plugin to communicate with the android USB serial port",
   "cordova": {
-    "id": "fr.drangies.cordova.serial",
+    "id": "cordovarduino",
     "platforms": [
       "android",
       "ubuntu"
