Preparation for npm publish

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
 /bin
 cordovarduino.iml
 src/cordovarduino.iml
+
+*.csproj.user
+*.suo
+*.cache
+Thumbs.db
+*.DS_Store
+
+*.bak
+*.cache
+*.log
+*.swp
+*.user
+
+node_modules
