Change plugin variable name & Don't re-request permission if it is already granted
Change plugin variable name to prevent conflict with existing variables of Betaflight Configurator

--- a/plugin.xml
+++ b/plugin.xml
@@ -10,7 +10,7 @@
 
     <!-- js module -->
     <js-module src="www/serial.js" name="Serial">
-        <clobbers target="window.serial" />
+        <clobbers target="window.cordova_serial" />
     </js-module>
 
     <!-- android -->
